bottomSheet bug fixed

--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -32,5 +32,13 @@
         tools:itemCount="3"
         tools:listitem="@layout/item_bottom_sheet_layout"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/approveButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/gray"
+            android:layout_margin="8dp"
+            android:text="@string/approve"/>
+
     </LinearLayout>
 </layout>
